[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scripts/ui_scripts/ChatBox.gd" type="Script" id=1]
[ext_resource path="res://src/themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/dynamic_fonts/Pixellari_17.tres" type="DynamicFont" id=3]

[node name="ChatBox" type="Control"]
anchor_top = 0.745
anchor_right = 0.342
anchor_bottom = 1.0
margin_top = -6.10352e-05
margin_right = -30.208
margin_bottom = -6.10352e-05
grow_vertical = 0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[color=#F7E65E][Server] Welcome to Top Down Survival![/color]"
text = "[Server] Welcome to Top Down Survival!"
scroll_following = true

[node name="InputContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 320.0
margin_bottom = 153.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/InputContainer"]
margin_right = 277.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
placeholder_text = "Message"
caret_blink = true
caret_blink_speed = 0.5

[node name="SendButton" type="Button" parent="VBoxContainer/InputContainer"]
margin_left = 281.0
margin_right = 320.0
margin_bottom = 24.0
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 3 )
text = "Send"

[connection signal="focus_entered" from="VBoxContainer/InputContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/InputContainer/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="VBoxContainer/InputContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/InputContainer/SendButton" to="." method="_on_SendButton_pressed"]
